@@ -70,6 +70,9 @@ Release 3.0.6-1.1 Start 25/10/2023 End XX/XX/XXXX
 44. envrules.c, mail_acl.c: Fix for invalid rules
 44. spawn-filter.c: setup qmail-local, qmail-remote arguments after envrules
    to allow envrules to set QLOCAL, QREMOTE
+- 05/12/2023
+45. qlocal_upgrade: removed forced update of QMAILLOCAL, QMAILREMOTE env
+    variables for qmail-send service
 
 * Tue Oct 17 2023 18:34:04 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.5-1.1%{?dist}
 Release 3.0.5-1.1 Start 11/09/2023 End 17/10/2023
